# edge-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  main.py  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/api/: main.py
src/chunking/: chunking.py  parent_child_chunking.py  structural_chunking.py
src/db/: qdrant_setup.py
src/llm/: llm_client.py
src/pipeline/: chunking.py  edges.py  embedding.py  evaluate_node.py  expand_query.py  extraction.py  generate_node.py  generation.py  grade_documents.py  graph.py  indexing.py  llm_client.py  parent_store.py  pipeline.py  qdrant_setup.py  retrieval.py  retrieve_node.py  rewrite_query.py  run_baseline.py  run_eval.py  state.py
src/ui/: app.py
tests/: README.md
tests/api/: test_routes.py
tests/e2e/: test_graph.py  thresholds.json
tests/unit/: test_advanced_chunking.py  test_chunking.py  test_edges.py  test_embedding.py  test_extraction.py  test_generation.py  test_nodes.py  test_retrieval.py
