[project]
name = "edge-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langgraph>=1.2.6",
    "openai>=2.44.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests that hit the real LLM/RAGAS (run with -m slow)",
]
addopts = "-m 'not slow'"
asyncio_mode = "auto"
